-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u40, 9
-
Component/s: hotspot
-
b42
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083226 | emb-9 | David Holmes | P4 | Resolved | Fixed | team |
java -XX:+TraceThreadEvents
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/workspace/9-2-build-linux-amd64/jdk9/909/hotspot/src/share/vm/runtime/mutex.cpp:1357), pid=15727, tid=139966457636608
# assert((!thread->is_Java_thread() || ((JavaThread *)thread)->thread_state() == _thread_in_vm) || rank() == Mutex::special) failed: wrong thread state for using locks
#
# JRE version: (9.0-b22) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b22-fastdebug mixed mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x00007f4c94116000): JavaThread "Reference Handler" daemon [_thread_blocked, id=15734, stack(0x00007f4c7aece000,0x00007f4c7afcf000)]
Stack: [0x00007f4c7aece000,0x00007f4c7afcf000], sp=0x00007f4c7afccfe0, free space=1019k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x104031c] VMError::report_and_die()+0x15c
V [libjvm.so+0x72fecb] report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xd43706] Monitor::check_prelock_state(Thread*)+0x56
V [libjvm.so+0xd4381f] Monitor::lock(Thread*)+0x3f
V [libjvm.so+0xfb99c6] Thread::trace(char const*, Thread const*) [clone .part.185]+0x146
V [libjvm.so+0xfb9d88] Thread::is_interrupted(Thread*, bool)+0x28
V [libjvm.so+0xd913da] ObjectMonitor::wait(long, bool, Thread*)+0x89a
V [libjvm.so+0xf73dc2] ObjectSynchronizer::wait(Handle, long, Thread*)+0x72
V [libjvm.so+0xaaf449] JVM_MonitorWait+0x1f9
j java.lang.Object.wait(J)V+0
j java.lang.Object.wait()V+2
j java.lang.ref.Reference.tryHandlePending(Z)Z+54
j java.lang.ref.Reference$ReferenceHandler.run()V+1
v ~StubRoutines::call_stub
V [libjvm.so+0x9d7b27] JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x18a7
V [libjvm.so+0x9d8cb2] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x622
V [libjvm.so+0x9d9027] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xb7
V [libjvm.so+0xaac694] thread_entry(JavaThread*, Thread*)+0xc4
V [libjvm.so+0xfc5344] JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xfc55b5] JavaThread::run()+0x1e5
V [libjvm.so+0xda6792] java_start(Thread*)+0xf2
C [libpthread.so.0+0x8182] start_thread+0xc2
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.lang.Object.wait(J)V+0
j java.lang.Object.wait()V+2
j java.lang.ref.Reference.tryHandlePending(Z)Z+54
j java.lang.ref.Reference$ReferenceHandler.run()V+1
v ~StubRoutines::call_stub
--------------- P R O C E S S ---------------
Java Threads: ( => current thread )
=>0x00007f4c94116000 JavaThread "Reference Handler" daemon [_thread_blocked, id=15734, stack(0x00007f4c7aece000,0x00007f4c7afcf000)]
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/workspace/9-2-build-linux-amd64/jdk9/909/hotspot/src/share/vm/runtime/mutex.cpp:1357), pid=15727, tid=139966457636608
# assert((!thread->is_Java_thread() || ((JavaThread *)thread)->thread_state() == _thread_in_vm) || rank() == Mutex::special) failed: wrong thread state for using locks
#
# JRE version: (9.0-b22) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b22-fastdebug mixed mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x00007f4c94116000): JavaThread "Reference Handler" daemon [_thread_blocked, id=15734, stack(0x00007f4c7aece000,0x00007f4c7afcf000)]
Stack: [0x00007f4c7aece000,0x00007f4c7afcf000], sp=0x00007f4c7afccfe0, free space=1019k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x104031c] VMError::report_and_die()+0x15c
V [libjvm.so+0x72fecb] report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xd43706] Monitor::check_prelock_state(Thread*)+0x56
V [libjvm.so+0xd4381f] Monitor::lock(Thread*)+0x3f
V [libjvm.so+0xfb99c6] Thread::trace(char const*, Thread const*) [clone .part.185]+0x146
V [libjvm.so+0xfb9d88] Thread::is_interrupted(Thread*, bool)+0x28
V [libjvm.so+0xd913da] ObjectMonitor::wait(long, bool, Thread*)+0x89a
V [libjvm.so+0xf73dc2] ObjectSynchronizer::wait(Handle, long, Thread*)+0x72
V [libjvm.so+0xaaf449] JVM_MonitorWait+0x1f9
j java.lang.Object.wait(J)V+0
j java.lang.Object.wait()V+2
j java.lang.ref.Reference.tryHandlePending(Z)Z+54
j java.lang.ref.Reference$ReferenceHandler.run()V+1
v ~StubRoutines::call_stub
V [libjvm.so+0x9d7b27] JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x18a7
V [libjvm.so+0x9d8cb2] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x622
V [libjvm.so+0x9d9027] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xb7
V [libjvm.so+0xaac694] thread_entry(JavaThread*, Thread*)+0xc4
V [libjvm.so+0xfc5344] JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xfc55b5] JavaThread::run()+0x1e5
V [libjvm.so+0xda6792] java_start(Thread*)+0xf2
C [libpthread.so.0+0x8182] start_thread+0xc2
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.lang.Object.wait(J)V+0
j java.lang.Object.wait()V+2
j java.lang.ref.Reference.tryHandlePending(Z)Z+54
j java.lang.ref.Reference$ReferenceHandler.run()V+1
v ~StubRoutines::call_stub
--------------- P R O C E S S ---------------
Java Threads: ( => current thread )
=>0x00007f4c94116000 JavaThread "Reference Handler" daemon [_thread_blocked, id=15734, stack(0x00007f4c7aece000,0x00007f4c7afcf000)]
- backported by
-
JDK-8083226 'Reference handler' thread triggers assert w/ TraceThreadEvents
-
- Resolved
-
- csr of
-
CCC-8062307 'Reference handler' thread triggers assert w/ TraceThreadEvents
-
- Closed
-
- duplicates
-
JDK-6757482 TraceThreadEvents crashes in check_prelock_state()
-
- Closed
-