8062307: 'Reference handler' thread triggers assert w/ TraceThreadEvents

Removed unused and non-working TraceThreadEvents option

Reviewed-by: coleenp, jiangli